force-app/main/default/objects/Regeneration_Request_Details__c/Regeneration_Request_Details__c.object-meta.xml
<CustomObject>
    <label>Regeneration Request Details</label>
    <nameField>
        <displayFormat>RRD-{00000}</displayFormat>
        <label>Regeneration Request Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regeneration Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>