force-app/main/default/objects/Regeneration_Request_Details__c/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <label>Batch Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>