force-app/main/default/objects/Regeneration_Request_Details__c/fields/Job_Details__c.field-meta.xml
<CustomField>
    <fullName>Job_Details__c</fullName>
    <label>Job Details</label>
    <type>TextArea</type>
</CustomField>