force-app/main/default/objects/Regeneration_Request_Details__c/fields/Minutes_Since_Modified__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Since_Modified__c</fullName>
    <formula>(NOW() - LastModifiedDate) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Since Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>