force-app/main/default/objects/Regeneration_Request_Details__c/fields/Parent_Job__c.field-meta.xml
<CustomField>
    <fullName>Parent_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Job</label>
    <referenceTo>Regeneration_Request_Details__c</referenceTo>
    <relationshipLabel>Regeneration Request Details</relationshipLabel>
    <relationshipName>Parent_Job_Details</relationshipName>
    <type>Lookup</type>
</CustomField>