force-app/main/default/objects/Regeneration_Request_Details__c/fields/Quote_No__c.field-meta.xml
<CustomField>
    <fullName>Quote_No__c</fullName>
    <label>Quote No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>