force-app/main/default/objects/Regeneration_Request_Details__c/fields/Status_for_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Ordering__c</fullName>
    <formula>CASE(Status__c,
                      &quot;Pending&quot;, 0,
                      &quot;Failed&quot;, 1,
                      &quot;Completed&quot;, 2,
                      0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status for Ordering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>